@@ -35,6 +35,7 @@ K  7009	whitespace line at beginning confuses InternetHeaders
 K  7014	IndexOutOfBoundsException reading IMAP literal when connection fails
 K  7019	IdleManager dies with CancelledKeyException
 K  7026	IdleManager can deadlock when not busy
+K  7027	IMAP Folder methods throw runtime exceptions when connection drops
 
 
 		  CHANGES IN THE 1.5.4 RELEASE
